Correction version mobile

--- a/style.css
+++ b/style.css
@@ -967,7 +967,6 @@ footer
 }
 
 @media screen and (max-width:480px)
-
 {   
    
     #top-bar
@@ -1143,13 +1142,13 @@ footer
         font-size: 0.9rem;
    }
 
-   #filtre img
+   #filtre i
     {
         border-radius: 50px;
         background-color: #DEEBFF;
         height: 13px;
         width: 13px;
-        padding: 13px;
+        padding: auto;
         z-index: 2;
     }
 
@@ -1218,12 +1217,24 @@ footer
     {
       width: 100%;
     }
-
+    .pop
+    {
+        width: 92%;
+        
+    }
     #logo_sec2
     { 
-        width: 85%;
+        width: 92%;
+        margin-left: auto;
+        margin-right: auto;
+        
+        
     }
+    #logo_sec2 h2
+    {
+        padding-left: 0%;
 
+    }
     .sheb
     {
         width: 30%;
@@ -1232,15 +1243,15 @@ footer
     /*Hebergements à Marseille*/
     #heb_main
     {
-        width: 96%;
-        margin-left: 0%;
+        width: 99%;
+        margin-left: 1%;
         order: 2;
         background-color: white;
     }
 
     .heb
     {
-        width: 100%;
+        width: 92%;
         height: 250px;
         box-shadow: 5px 5px 3px #f2f2f2;
         border: 1px solid #f2f2f2;   
@@ -1248,8 +1259,8 @@ footer
 
     #bold2_heb
     {
-        height: 2%;
-       height: 20px;
+      height: 2%;
+       
     }
 
     #hebergement 
@@ -1262,7 +1273,15 @@ footer
     {
         width: 20%;
     }
-
+    #logo_heb h2
+    {
+        padding-left: 0%;
+    }
+    .bold2_heb a
+    {
+       
+        margin-left: 1%;
+    }
     /*Activités à Marseille*/
     #activ
     {
@@ -1273,7 +1292,7 @@ footer
     }
     #activ
     {
-        width: 90%;
+        width: 99%;
         margin-left:auto;
         margin-right: auto;
     }
@@ -1282,8 +1301,9 @@ footer
     {
         font-size: 1.1em;
         font-weight: bolder;
-        margin-left: 1%;
-        width: 98%;
+        margin-left: auto;
+        width: 95.5%;
+        text-align: left;
     }
 
     #actmain
@@ -1299,19 +1319,21 @@ footer
     .act1
     {
         height: 300px;
-        width: 100%;
+        width: 92%;
         min-width: 200px;
         margin-bottom: 20px;
-        margin-left: 0%;
+        margin-left: auto;
+        margin-right: auto;
        
     } 
     .act2
     {
-        height: 650px;
-        width: 100%;
+        height: 640px;
+        width: 92%;
         min-width: 200px;
-        margin-bottom: 20px;
-        margin-left: 0%;
+        margin-bottom: 0px;
+        margin-left: auto;
+        margin-right: auto;
     }
     .meta_act2
     {   display: flex;
